# inReach_Bot

./: .env.example  .gitignore  CLAUDE.md  README.md  avalanche_raw.json  pyproject.toml
.github/workflows/: activate-sending.yml  configure-trip.yml  preview.yml  scheduled-send.yml
.trip_state/: current_trip.json  last_sent.json
scripts/: activate_sending.py  configure_trip.py  debug_mapshare.py  read_trip_field.py
src/inreach_bot/: __init__.py  config.py  main.py  types.py
src/inreach_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/inreach_bot/alerts/: github_issue.py
src/inreach_bot/delivery/: mapshare_playwright.py
src/inreach_bot/formatters/: message_builder.py  verbose_dump.py
src/inreach_bot/llm/: claude_summary.py
src/inreach_bot/providers/: avcan.py  opensnow.py  weather_fallback.py
tests/: test_avcan_provider.py  test_claude_summary.py  test_config_gate.py  test_message_builder.py  test_opensnow_provider.py  test_preview_artifacts.py
tests/fixtures/: avcan_areas.json  avcan_product_detail.json  avcan_report_missing_btl.json  avcan_report_numeric.json  avcan_report_unknown_label.json  avcan_report_words.json  opensnow_sample.json
